--- a/index.html
+++ b/index.html
@@ -105,17 +105,17 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 
 <ul>
   <li><a href="./pdf/1.04-jQuery-Plugins.pdf" 
-    alt="1.04 jQuery Plugins (pdf)." 
+    alt="1.04 jQuery Plugins (display pdf)." 
     target="_blank" rel="noreferrer noopener">
-	1.04 jQuery Plugins (pdf)</a><br><br></li>
+    1.04 jQuery Plugins (display pdf)</a><br><br></li>
   <li><a href="./zip/1.04-FlexSliderBasic-START.zip" 
     alt="1.04 Flex Slider Basic START (zip download)." 
     target="_blank" rel="noopener noreferrer">
-	1.04 Flex Slider Basic START (zip download)</a><br><br></li>
+    1.04 Flex Slider Basic START (zip download)</a><br><br></li>
   <li><a href="./zip/1.04-FlexSliderPlugin.zip" 
     alt="1.04 Flex Slider Plugin (zip download)." 
     target="_blank" rel="noopener noreferrer">
-	1.04 Flex Slider Plugin (zip download)</a></li>
+    1.04 Flex Slider Plugin (zip download)</a></li>
 </ul>
 
 <blockquote>
@@ -131,9 +131,9 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 
 <ul>
   <li><a href="./pdf/1.12-jQuery-FlexSliderPlugin.pdf" 
-    alt="1.12 jQuery Flex Slider Plugin (pdf)." 
+    alt="1.12 jQuery Flex Slider Plugin (display pdf)." 
     target="_blank" rel="noreferrer noopener">
-    <b>1.12 jQuery Flex Slider Plugin (pdf)</b></a></li>
+    1.12 jQuery Flex Slider Plugin (display pdf)</a></li>
 </ul>
 
 <h3><b>Week 2: Combining Scripts and Skill Building Through Practice</b></h3>
@@ -144,9 +144,9 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="./zip/2.02-jQuery-ScrollEffects-START.zip" 
+  <li><a href="./zip/2.02-jQuery-Scroll-Effects-START.zip" 
     target="_blank" rel="noopener noreferrer"
-	alt="2.02 jQuery Scroll Effects START (zip download).">
+    alt="2.02 jQuery Scroll Effects START (zip download).">
     2.02 jQuery Scroll Effects START (zip download)</a></li>
 </ul>
 
@@ -170,9 +170,9 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 
 <ul>
   <li><a href="./pdf/2.17-jQuery-PageLocationTracking.pdf" 
-    alt="2.17 jQuery Page Location Tracking (pdf)." 
+    alt="2.17 jQuery Page Location Tracking (display pdf)." 
     target="_blank" rel="noreferrer noopener">
-    <b>2.17 jQuery Page Location Tracking (pdf)</b></a></li>
+    <b>2.17 jQuery Page Location Tracking (display pdf)</b></a></li>
 </ul>
 
 <blockquote>
@@ -180,7 +180,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="./zip/2.18-JS-ScrollEffects-START.zip" 
+  <li><a href="./zip/2.18-JS-Scroll-Effects-START.zip" 
     target="_blank" rel="noreferrer noopener" 
     alt="2.18 JavaScript Scroll Effects START (zip download).">
     2.18 JS Scroll Effects START (zip download)</a></li>
@@ -201,9 +201,9 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 
 <ul>
   <li><a href="./pdf/2.28-JS-ScrollEffects.pdf" 
-    alt="2.28 JavaScript Scroll Effects (pdf)."
+    alt="2.28 JavaScript Scroll Effects (display pdf)."
     target="_blank" rel="noreferrer noopener">
-    2.28 JS Scroll Effects (pdf)</a></li>
+    2.28 JS Scroll Effects (display pdf)</a></li>
 </ul>
 
 <blockquote>
@@ -248,13 +248,13 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 
 <ul>
   <li><a href="./pdf/2.39-ScriptionSitePart1-HTML-CSS.pdf" 
-    alt="2.39 Scription Site Part 1 HTML &amp; CSS (pdf)."
+    alt="2.39 Scription Site Part 1 HTML &amp; CSS (display pdf)."
     target="_blank" rel="noreferrer noopener">
     2.39 Scription Site Part 1 HTML &amp; CSS (pdf)</a><br><br></li>
   <li><a href="./pdf/2.39-ScriptionSitePart2-InteractionChallenges.pdf" 
-    alt="2.39 Scription Site Part 2 Interchange Challenges (pdf)." 
+    alt="2.39 Scription Site Part 2 Interchange Challenges (display pdf)." 
     target="_blank" rel="noreferrer noopener">
-	2.39 Scription Site Part 2 Interchange Challenges (pdf)</a></li>
+    2.39 Scription Site Part 2 Interchange Challenges (display pdf)</a></li>
 </ul>
 
 <h3><b>Week 3. Intro to Objects and Data in JavaScript</b></h3>
@@ -268,7 +268,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
   <li><a href="./zip/3.02-JS-Objects-START.zip" 
     aria-label="3.02 JavaScript Objects START."
     target="_blank" rel="noreferrer noopener">
-	3.02 JS Objects START (zip download)</a></li>
+    3.02 JS Objects START (zip download)</a></li>
 </ul>
 
 <blockquote>
@@ -281,13 +281,13 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 
 <ul>
   <li><a href="./pdf/3.07-JS-Object-Challenges.pdf" 
-    alt="3.07 JavaScript Object Challenges (pdf)."
+    alt="3.07 JavaScript Object Challenges (display pdf)."
     target="_blank" rel="noreferrer noopener">
-	3.07 JS Objects Challenges (pdf)</a><br><br></li>
+    3.07 JS Objects Challenges (display pdf)</a><br><br></li>
   <li><a href="./pdf/3.07-JS-Objects-Data.pdf" 
-    alt="3.07 JavaScript Objects and Data (pdf)."
+    alt="3.07 JavaScript Objects and Data (display pdf)."
     target="_blank" rel="noreferrer noopener">
-	3.07 JS Objects &amp; Data (pdf)</a></li>
+    3.07 JS Objects &amp; Data (display pdf)</a></li>
 </ul>
 
 <blockquote>
@@ -296,9 +296,9 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 
 <ul>
   <li><a href="./pdf/3.08-PigDiceGame-Diagrams.pdf" 
-    alt="3.08 Pig Dice Game Diagrams (pdf)."
+    alt="3.08 Pig Dice Game Diagrams (display pdf)."
     target="_blank" rel="noreferrer noopener">
-    <b>3.08 Pig Dice Game Diagrams (pdf)</b></a></li>
+    3.08 Pig Dice Game Diagrams (display pdf)</a></li>
 </ul>
 
 <blockquote>
@@ -308,10 +308,10 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="./pdf/3.11-Intro-Pig-Dice-Game.pdf" 
-    alt="3.11 Introduction to the Pig Dice Game (pdf)."
+  <li><a href="./pdf/3.11-IntrotoPigDiceGame.pdf" 
+    alt="3.11 Introduction to the Pig Dice Game (display pdf)."
     target="_blank" rel="noreferrer noopener">
-    <b>3.11 Introduction to the Pig Dice Game (pdf)</b></a></li>
+    3.11 Introduction to the Pig Dice Game (display pdf)</a></li>
 </ul>
 
 <h3><b>Week 4. Building a Simple Game in JavaScript</b></h3>
@@ -345,9 +345,9 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 
 <ul>
   <li><a href="./pdf/4.14-GameofPig.pdf" 
-    alt="4.14 Game of Pig (pdf)."
+    alt="4.14 Game of Pig (display pdf)."
     target="_blank" rel="noreferrer noopener"> 
-    <b>4.14 Game of Pig (pdf)</b></a></li>
+    4.14 Game of Pig (display pdf)</a></li>
 </ul>
 
 <blockquote>
@@ -384,13 +384,13 @@ image sliders.</p>
 <ul>
   <li><a href="./pdf/1.04-jQuery-Plugins.pdf" 
     target="_blank" rel="noreferrer noopener">
-    <b>1.04 jQuery Plugins (pdf)</b></a><br><br></li>
+    1.04 jQuery Plugins (display pdf)</a><br><br></li>
   <li><a href="./zip/1.04-FlexSliderBasic-START.zip" 
     target="_blank" rel="noopener noreferrer">
-    <b>1.04 FlexSlider Basic START (zip download)</b></a><br><br></li>
+    1.04 FlexSlider Basic START (zip download)</a><br><br></li>
   <li><a href="./zip/1.04-FlexSliderPlugin.zip" 
     target="_blank" rel="noopener noreferrer">
-    <b>1.04 FlexSlider Plugin (zip download)</b></a></li>
+    1.04 FlexSlider Plugin (zip download)</a></li>
 </ul>
 
 <ol start="5" type="1">
@@ -406,9 +406,9 @@ image sliders.</p>
 
 <ul>
   <li><a href="./pdf/1.12-jQuery-FlexSliderPlugin.pdf" 
-    alt="1.12 jQuery Flex Slider Plugin (pdf)."
+    alt="1.12 jQuery Flex Slider Plugin (display pdf)."
     target="_blank" rel="noopener noreferrer">
-    <b>1.12 jQuery Flex Slider Plugin (pdf)</b></a></li>
+    1.12 jQuery Flex Slider Plugin (display pdf)</a></li>
 </ul>
 
 <h3>Module (Week) Two:</h3>
@@ -449,9 +449,9 @@ series of challenges.</p>
 
 <ul>
   <li><a href="./pdf/2.06-jQuery-SmoothScroll.pdf" 
-    alt="2.06 jQuery Smooth Scroll Effects (pdf)."
+    alt="2.06 jQuery Smooth Scroll Effects (display pdf)."
     target="_blank" rel="noreferrer noopener">
-    2.06 jQuery Smoother Scroll Effects (pdf)</a></li>
+    2.06 jQuery Smoother Scroll Effects (display pdf)</a></li>
 </ul>
 
 <ol start="7" type="1">
@@ -471,9 +471,9 @@ series of challenges.</p>
 <!-- 10 minute read -->
 <ul>
   <li><a href="./pdf/2.17-jQuery-PageLocationTracking.pdf" 
-    alt="2.17 jQuery Page Location Tracking (pdf)."
+    alt="2.17 jQuery Page Location Tracking (display pdf)."
     target="_blank" rel="noreferrer noopener">
-    2.17 jQuery Page Location Tracking (pdf)</a></li>
+    2.17 jQuery Page Location Tracking (display pdf)</a></li>
 </ul>
 
 <ol start="18" type="1">
@@ -502,9 +502,9 @@ series of challenges.</p>
 
 <ul>
   <li><a href="./pdf/2.28-JS-ScrollEffects.pdf" 
-    alt="2.28 JavaScript Scroll Effects (pdf)."
+    alt="2.28 JavaScript Scroll Effects (display pdf)."
     target="_blank" rel="noreferrer noopener">
-    2.28 JS Scroll Effects (pdf)</a></li>
+    2.28 JS Scroll Effects (display pdf)</a></li>
 </ul>
 
 <ol start="29" type="1">
@@ -545,9 +545,13 @@ series of challenges.</p>
 
 <ul>
   <li><a href="./pdf/2.39-ScriptionSitePart1-HTML-CSS.pdf" 
-    alt="2.39 Scription Site Part 1 HTML and CSS (pdf)."
+    alt="2.39 Scription Site Part 1 HTML and CSS (display pdf)."
     target="_blank" rel="noreferrer noopener">
-    2.39 Scription Site Part 1 HTML &amp; CSS (pdf)</a></li>
+    2.39 Scription Site Part 1 HTML &amp; CSS (display pdf)</a><br><br></li>
+  <li><a href="./pdf/2.39-ScriptionSitePart2-InteractionChallenges.pdf" 
+    alt="2.39 Scription Site Part 2 Interaction Challenges (display pdf)."
+    target="_blank" rel="noreferrer noopener">
+    2.39 Scription Site Part 2 Interaction Challenges (display pdf)</a></li>
 </ul>
 
 <h3>Module (Week) Three:</h3>
@@ -584,9 +588,9 @@ problem down into smaller pieces.</p>
 
 <ul>
   <li><a href="./pdf/3.07-JS-Object-Challenges.pdf" 
-    alt="3.07 JavaScript Object Challenges (pdf)."
+    alt="3.07 JavaScript Object Challenges (display pdf)."
     target="_blank" rel="noreferrer noopener">
-    3.07 JS Object Challenges (pdf)</a></li>
+    3.07 JS Object Challenges (display pdf)</a></li>
 </ul>
 
 <ol start="8" type="1">
@@ -1098,9 +1102,9 @@ for a future as a JavaScript developer.</p>
 
 <ul>
   <li><a href="./pdf/1.04-jQuery-Plugins.pdf" 
-    alt="1.04 jQuery Plugins (pdf)."
+    alt="1.04 jQuery Plugins (display pdf)."
     target="_blank" rel="noreferrer noopener">
-	1.04 jQuery Plugins (pdf)</a></li>
+    1.04 jQuery Plugins (display pdf)</a></li>
 </ul>
 
 <p>Attached is a zip file of the things you need to begin this exercise.
@@ -2669,9 +2673,9 @@ section: <b>jQuery Plugins and FlexSlider</b>.</p>
 
 <ul>
   <li><a href="./pdf/1.12-jQuery-FlexSliderPlugin.pdf" 
-    alt="1.12 jQuery Flex Slider Plugin (pdf)." 
+    alt="1.12 jQuery Flex Slider Plugin (display pdf)." 
     target="_blank" rel="noopener noreferrer">
-	1.12 jQuery Flex Slider Plugin (pdf)</a></li>
+    1.12 jQuery Flex Slider Plugin (display pdf)</a></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h2 id="ch2-01">2.01 Module 2 Intro (0:38)</h2>
@@ -3306,9 +3310,9 @@ section to another. We're going to deal with that in the next
 lesson.</p>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/eRvCI/pdf-of-presentation"
+  <li><a href="./pdf/2.06-jQuery-SmoothScroll.pdf" 
     target="_blank" rel="noreferrer noopener">
-    PDF of Presentation: 2.06.jQuerySmoothScroll.pdf</a></li>
+    2.06 jQuery Smooth Scroll (display pdf)</a></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h2 id="ch2-07">2.07 Introduction to Page Location Tracking</h2>
@@ -4933,7 +4937,7 @@ the same script, and play JavaScript.</p>
 <ul>
   <li><a href="./pdf/2.17-jQuery-PageLocationTracking.pdf" 
     target="_blank" rel="noreferrer noopener">
-    2.17 jQuery Page Location Tracking (pdf) (28 pgs).</a></li>
+    2.17 jQuery Page Location Tracking (display pdf)</a></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h2 id="ch2-18">2.18 Introduction to Scroll Effects with JS</h2>
@@ -6339,7 +6343,7 @@ that's up to you.</p>
 <ul>
   <li><a href="./pdf/2.28-JS-ScrollEffects.pdf"
     target="_blank" rel="noreferrer noopener">
-    2.28 JS Scroll Effects (pdf)</a></li>
+    2.28 JS Scroll Effects (display pdf)</a></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h2 id="ch2-29">2.29 Scription Site Introduction (5:54)</h2>
@@ -8623,8 +8627,12 @@ href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/
 class="uri">https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/gpBsr/pdf-of-presentations</a></p>
 
 <ul>
-  <li><p><b>2.39 ScriptionSite-Part1-HTML-CSS.pdf</b></p></li>
-  <li><p><b>2.39 ScriptionSite-Part2-InteractionChallenges.pdf</b></p></li>
+  <li><a href="./pdf/2.39-ScriptionSitePart1-HTML-CSS.pdf" 
+    target="_blank" rel="noreferrer noopener">
+    2.39 Scription Site Part 1 HTML &amp; CSS (display pdf)</a></li>
+  <li><a href="./pdf/2.39-ScriptionSitePart2-InteractionChallenges.pdf" 
+    target="_blank" rel="noreferrer noopener">
+    2.39 Scription Site Part 2 Interaction Challenges (display pdf)</a></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h2 id="ch3-01">3.01 Module 3 Intro (0:37)</h2>
@@ -9404,10 +9412,10 @@ the topics.</p>
 <h3 id="3.07-pdf">JavaScript Objects &amp; Data PDF Files</h3>
 
 <ul>
-  <li><p><b><a href="https://inter-jquery.bauska.org/pdf/3.07-JS-Objects-Data.pdf" 
+  <li><a href="https://inter-jquery.bauska.org/pdf/3.07-JS-Objects-Data.pdf" 
     target="_blank" rel="noreferrer noopener" 
-	alt="3.07 JavaScript Objects &amp; Data (pdf).">
-    3.07 JS Objects &amp; Data (pdf)</a></b></p></li>
+    alt="3.07 JavaScript Objects &amp; Data (display pdf).">
+    3.07 JS Objects &amp; Data (display pdf)</a></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h2 id="ch3-08">3.08 Intro to Pig Dice Game (5:44)</h2>
@@ -9869,10 +9877,10 @@ functionality you need for each piece.</p>
 <h2 id="ch3-11-pdf">Intro to Pig Dice Game pdf Files</h2>
 
 <ul>
-  <li><b><a href="./pdf/3.11 Intro-to-Pig-Dice-Games.pdf" 
-    alt="3.11 Introduction to the Pig Dice Game (pdf)."
+  <li><a href="./pdf/3.11 IntrotoPigDiceGame.pdf" 
+    alt="3.11 Introduction to the Pig Dice Game (display pdf)."
     target="_blank" rel="noreferrer noopener">
-    3.11 Intro to Pig Dice Game (pdf)</a></b></li>
+    3.11 Intro to Pig Dice Game (display pdf)</a></li>
 </ul>
 
 <blockquote>
@@ -11694,9 +11702,9 @@ excellent versions people have made of the big game.</p>
 
 <ul>
   <li><a href="./pdf/4.14-GameofPig.pdf" 
-    alt="4.14 Game of Pig (pdf)." 
+    alt="4.14 Game of Pig (display pdf)." 
     target="_blank" rel="noreferrer noopener">
-    4.14 Game of Pig (pdf)</a>
+    4.14 Game of Pig (display pdf)</a>
   </li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
