--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="./pdf/3.08-PigDiceGame-Diagrams.pdf" 
-    alt="3.08 Pig Dice Game Diagrams (display pdf)."
+  <li><a href="./pdf/3.08-PigDiceGame-Diagrams.png" 
+    alt="3.08 Pig Dice Game Diagrams (display png)."
     target="_blank" rel="noreferrer noopener">
-    3.08 Pig Dice Game Diagrams (display pdf)</a></li>
+    3.08 Pig Dice Game Diagrams (display png)</a></li>
 </ul>
 
 <blockquote>
