--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
   <li><a href="./pdf/2.39-ScriptionSitePart1-HTML-CSS.pdf" 
     alt="2.39 Scription Site Part 1 HTML &amp; CSS (display pdf)."
     target="_blank" rel="noreferrer noopener">
-    2.39 Scription Site Part 1 HTML &amp; CSS (pdf)</a><br><br></li>
+    2.39 Scription Site Part 1 HTML &amp; CSS (display pdf)</a><br><br></li>
   <li><a href="./pdf/2.39-ScriptionSitePart2-InteractionChallenges.pdf" 
     alt="2.39 Scription Site Part 2 Interchange Challenges (display pdf)." 
     target="_blank" rel="noreferrer noopener">
@@ -702,15 +702,15 @@ guidelines and the Coursera Honor Code here:</p>
 
 <ul>
   <li><a href="https://learner.coursera.help/hc/en-us" 
-    rel="noopener noreferrer" target="_blank"> Coursera’s Learner Support/Help Center</a></li>
+    rel="noopener noreferrer" target="_blank">Coursera’s Learner Support/Help Center</a></li>
   <li><a href="https://learner.coursera.help/hc/en-us/articles/208280106-Report-a-problem-with-a-course"
-    rel="noopener noreferrer" target="_blank"> Flagging a Lecture</a></li>
+    rel="noopener noreferrer" target="_blank">Flagging a Lecture</a></li>
   <li><a href="https://learner.coursera.help/hc/en-us/articles/208279866-Assignment-deadlines"
-    rel="noopener noreferrer" target="_blank"> Assignment Deadlines</a></li>
+    rel="noopener noreferrer" target="_blank">Assignment Deadlines</a></li>
   <li><a href="https://learner.coursera.help/hc/en-us/sections/201895903-Peer-reviewed-assignments"
-    rel="noopener noreferrer" target="_blank"> Peer Reviewed Assignments</a></li>
+    rel="noopener noreferrer" target="_blank">Peer Reviewed Assignments</a></li>
   <li><a href="https://learner.coursera.help/hc/en-us/articles/209818863-Coursera-Honor-Code" 
-    rel="noopener noreferrer" target="_blank"> Coursera’s Honor Code</a></li>
+    rel="noopener noreferrer" target="_blank">Coursera’s Honor Code</a></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h2 id="ch1-00">1.00 Welcome! Course Introduction (0:40)</h2>
@@ -3353,7 +3353,8 @@ difficulties that you have to deal with. But the really cool thing is
 that if we could get these things to highlight, we could do anything on
 the page based on where we are, scroll down the page. If you think about
 that for a second and go look at some of the interesting websites that
-are out there. https://callbruno.com/en.</p>
+are out there such as <a href="https://callbruno.com/en" target="_blank" 
+rel="noreferrer noopener">Call Bruno</a>.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~ 163/164. example scroll callbruno.com (85) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="border"
@@ -3770,22 +3771,20 @@ method that we can pass in a function. I'm going to push the tops and I
 have a <b>Math.floor</b> and you'll let me take that out just for a
 minute. I'll take math for it now because that kind of confuses things.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~ 187. section size, no rounding (100) ~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed"
+<!--~~~~~~~~~~~~~ 187/188. section size, no rounding, console log, posttops (100) ~~~~~~~~~~~~~~-->
+<img class="border"
   src="./images/image187.png"
   loading="lazy"
   title="Section size, no rounding"
   alt="Section size, no rounding."
-  style="width:50%;" />
-<br><br>
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 188. console log, posttops (100) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed"
+  style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;" />
+<img class="border"
   src="./images/image188.png"
   loading="lazy"
   title="console.log, postTops"
   alt="console.log, postTops."
-  style="width:50%;" />
+  style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;" />
+<p style="clear: both;"></p>
 
 <p>Put this in here for a moment, posts each function, post up push. This
 offset top, this refers to the post that's getting pushed in. This is
@@ -11738,6 +11737,7 @@ you'll get more practice. So I look forward to seeing you there.</p>
 
 <h6>Prior Update 1/30/2024 9:07pm</h6>
 <h6>Last Updated 5/31/2024 11+ am</h6>
+<h6>Last Updated 6/10/2024 10+ pm</h6>
 
 </body>
 </html>
