--- a/index.html
+++ b/index.html
@@ -1115,12 +1115,12 @@ carrying the extension .ZIP.</p>
 <h4 id="ch1-04-zip">jQuery FlexSlider Plugins START zip Files</h4>
 
 <ul>
-  <li><a href="./zip_files/1.04-FlexSliderBasic-START.zip" 
-    alt="1.0 Flex Slider Basic START (zip download)."
+  <li><a href="./zip/1.04-FlexSliderBasic-START.zip" 
+    alt="1.04 Flex Slider Basic START (zip download)."
     target="_blank" rel="noopener noreferrer">
 	1.04 Flex Slider Basic START (download ZIP)</a>
   </li>
-  <li><a href="./zip_files/1.04-FlexSliderPlugin.zip"
+  <li><a href="./zip/1.04-FlexSliderPlugin.zip"
     target="_blank" rel="noopener noreferrer">
 	1.04 Flex Slider Plugin (download ZIP)</a>
   </li>
