--- a/index.html
+++ b/index.html
@@ -758,12 +758,18 @@ elements on web pages and that's really pretty fun.</p>
 <h2 id="ch1-02">1.02 Introduction to jQuery Plugins (3:49)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 05. intro to jquery plugins (09) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+<!--
 <img class="displayed"
   src="./images/image005.png" 
   loading="lazy"
   title="1.03 Intro to jQuery Plugins"
   alt="1.03 Intro to jQuery Plugins."
   style="width:40%;" />
+-->
+<a href="./images/image005.png" 
+  target="_blank" rel="noopener noreferrer">
+  <img src="https://plugins.jquery.com/" 
+  alt="The jQuery Plugin Registry" width="300px" height="300px" /> </a>
 
 <p>Just as a quick recap, we've learned a lot of JavaScript so far.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
