--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   <title>UC @Davis' Interactivity with JavaScript and jQuery</title>
   <link rel="stylesheet" type="text/css" href="./css/styles.css">
+  <link rel="stylesheet" type="text/css" href="./css/hover-menu.css">
 </head>
 <body>
   <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
@@ -87,11 +88,19 @@ work together to create a more complex program; and identify processes
 for breaking larger programs into smaller, more manageable pieces.</p>
 
 <!-- table of contents -->
+<p id="table-of-contents"></p>
+<h2><a href="#table-of-contents">Table of Contents</a></h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ hoverable dropdown menu ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2><a href="#table-of-contents">Table of Contents</a></h2>
-
-<p id="table-of-contents"></p>
+<figure class="hover-menu">
+	<img src="./images/image001.png"/>
+	<div>
+		<a href="ch1-01">jQuery Plugins</a>
+		<a href="ch2-01">Combining Scripts</a>
+		<a href="ch3-01">Objects &amp; Data</a>
+		<a href="ch4-01">Building a Game</a>
+	</div>
+</figure>
 
 <h3>Week 1: jQuery Plugins and Capturing the Scroll Event</h3>
 
@@ -11739,6 +11748,7 @@ you'll get more practice. So I look forward to seeing you there.</p>
 <h6>Prior Update 1/30/2024 9:07pm</h6>
 <h6>Last Updated 5/31/2024 11+ am</h6>
 <h6>Last Updated 6/10/2024 10+ pm</h6>
+<h6>Last Updated 6/17/2024 Mon 3+ pm</h6>
 
 </body>
 </html>
