--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 <figure class="hover-menu">
 	<img src="./images/image001.png"/>
 	<div>
-		<a href="#ch1-01">1. jQuery Plugins</a>
-		<a href="#ch2-01">2. Combining Scripts</a>
-		<a href="#ch3-01">3. Objects &amp; Data</a>
-		<a href="#ch4-01">4. Building a Game</a>
+		<a href="#ch1-01">jQuery</a>
+		<a href="#ch2-01">Scripts</a>
+		<a href="#ch3-01">Objects</a>
+		<a href="#ch4-01">Game</a>
 	</div>
 </figure>
 
