--- a/index.html
+++ b/index.html
@@ -54,11 +54,9 @@
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <header id="title-block-header">
-    <h1 style="text-align:center;" class="title">Interactivity with JavaScript and jQuery</h1>
-    <h6 style="text-align:center;">(by William Mead, Lecturer - University of California 
-    <span class="citation" data-cites="Davis">@Davis</span>)</h6>
+    <h1 style="text-align:center;" class="title"><span class="citation" data-cites="UC @Davis'</span> Interactivity with JavaScript and jQuery</h1>
+    <h6 style="text-align:center;">taught by William Mead, Lecturer<h6>
   </header>
-
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~ 01. jquery & javascript logo (01) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
