--- a/index.html
+++ b/index.html
@@ -6569,8 +6569,8 @@ the page.</p>
   src="./images/image365.png"
   loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
-  title="More scription for section code"
-  alt="More scription for section code." />
+  title="More Scription for section code"
+  alt="More Scription for section code." />
 <p style="clear: both;"></p>
 
 <p>So going back to our design here, if we look at this, you'll see up
@@ -7243,7 +7243,7 @@ some, basic page section stuff. That is going to get inherited across the entire
   src="./images/image416.png"
   loading="lazy"
   title="Scription"
-  alt="Scription."
+  alt="Scription"
   style="width:50%" />
 
 <p>Let us go take a look at what that looks like, those rules applied. Boom, already 
@@ -7713,7 +7713,6 @@ isn't going to be any interactive elements for the rest of the page.</p>
   title="Add mobile with Scription"
   alt="Add mobile with Scription." />
 <p style="clear: both;"></p>
-
 
 <p>So these styles will just stay the way they are and we're not going to
 do anything interactive with these last two sections, there our team
@@ -8411,8 +8410,8 @@ lesson. No big deal.</p>
   src="./images/image511.png"
   loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
-  title="Add tabs from Scription and jquery"
-  alt="Add tabs from Scription and jquery." />
+  title="Add tabs from Scription and jQuery"
+  alt="Add tabs from Scription and jQuery." />
 <img class="border"
   src="./images/image512.png"
   loading="lazy"
@@ -8625,9 +8624,10 @@ working on this project. Hopefully, it's a lot of fun.</p>
 <p>Here is a <a
 href="https://cpe-web-assignments.ucdavis.edu/scription/">link</a> to
 the finished version of the Scription Site Honor's Assignment.</p>
+
 <p><a
 href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/PEs9J/scription-finished-version"
-class="uri">https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/PEs9J/scription-finished-version</a></p>
+class="uri">Finished Version of the Scription Site Honor's Assignment</a>.</p>
 
 <h2>Scription Site Parts 1 &amp; 2</h2>
 
